tests/snapshots/approval__review-allowed.snap
---
source: tests/approval.rs
expression: "testing::snapshot(8, paint)"
---
== dark-truecolor · 40x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny




---
r0 c0..2 fg=Live bg=Background
r0 c2..9 fg=Foreground bg=Background bold
r0 c9..12 fg=Border bg=Background
r0 c12..23 fg=Muted bg=Background
r0 c23..40 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..16 fg=Foreground bg=Background bold
r1 c16..40 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..36 fg=Foreground bg=Background
r2 c36..40 bg=Background
r3 c0..1 fg=Foreground bg=Background bold
r3 c1..2 bg=Background
r3 c2..12 fg=Muted bg=Background
r3 c12..15 fg=Border bg=Background
r3 c15..16 fg=Foreground bg=Background bold
r3 c16..17 bg=Background
r3 c17..21 fg=Muted bg=Background
r3 c21..40 bg=Background
r4 c0..40 bg=Background
r5 c0..40 bg=Background
r6 c0..40 bg=Background
r7 c0..40 bg=Background

== dark-truecolor · 80x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny




---
r0 c0..2 fg=Live bg=Background
r0 c2..9 fg=Foreground bg=Background bold
r0 c9..12 fg=Border bg=Background
r0 c12..23 fg=Muted bg=Background
r0 c23..80 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..16 fg=Foreground bg=Background bold
r1 c16..80 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..36 fg=Foreground bg=Background
r2 c36..80 bg=Background
r3 c0..1 fg=Foreground bg=Background bold
r3 c1..2 bg=Background
r3 c2..12 fg=Muted bg=Background
r3 c12..15 fg=Border bg=Background
r3 c15..16 fg=Foreground bg=Background bold
r3 c16..17 bg=Background
r3 c17..21 fg=Muted bg=Background
r3 c21..80 bg=Background
r4 c0..80 bg=Background
r5 c0..80 bg=Background
r6 c0..80 bg=Background
r7 c0..80 bg=Background

== dark-truecolor · 120x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny




---
r0 c0..2 fg=Live bg=Background
r0 c2..9 fg=Foreground bg=Background bold
r0 c9..12 fg=Border bg=Background
r0 c12..23 fg=Muted bg=Background
r0 c23..120 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..16 fg=Foreground bg=Background bold
r1 c16..120 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..36 fg=Foreground bg=Background
r2 c36..120 bg=Background
r3 c0..1 fg=Foreground bg=Background bold
r3 c1..2 bg=Background
r3 c2..12 fg=Muted bg=Background
r3 c12..15 fg=Border bg=Background
r3 c15..16 fg=Foreground bg=Background bold
r3 c16..17 bg=Background
r3 c17..21 fg=Muted bg=Background
r3 c21..120 bg=Background
r4 c0..120 bg=Background
r5 c0..120 bg=Background
r6 c0..120 bg=Background
r7 c0..120 bg=Background

== no-color · 40x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny





== no-color · 80x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny





== no-color · 120x8
✓ Allowed · Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once · n deny





== ascii · 40x8
Y Allowed - Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once  n deny





== ascii · 80x8
Y Allowed - Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once  n deny





== ascii · 120x8
Y Allowed - Auto-Review
$ cat src/lib.rs
Why: reads files inside this project
y allow once  n deny
