tests/snapshots/approval__review-undecided.snap
---
source: tests/approval.rs
expression: "testing::snapshot(8, paint)"
---
== dark-truecolor · 40x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety
decision: your call.
y allow once · n deny


---
r0 c0..2 fg=Muted bg=Background
r0 c2..18 fg=Foreground bg=Background bold
r0 c18..21 fg=Border bg=Background
r0 c21..32 fg=Muted bg=Background
r0 c32..40 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..22 fg=Foreground bg=Background bold
r1 c22..40 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..25 fg=Foreground bg=Background
r2 c25..40 bg=Background
r3 c0..33 fg=Foreground bg=Background bold
r3 c33..40 bg=Background
r4 c0..20 fg=Foreground bg=Background bold
r4 c20..40 bg=Background
r5 c0..1 fg=Foreground bg=Background bold
r5 c1..2 bg=Background
r5 c2..12 fg=Muted bg=Background
r5 c12..15 fg=Border bg=Background
r5 c15..16 fg=Foreground bg=Background bold
r5 c16..17 bg=Background
r5 c17..21 fg=Muted bg=Background
r5 c21..40 bg=Background
r6 c0..40 bg=Background
r7 c0..40 bg=Background

== dark-truecolor · 80x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once · n deny



---
r0 c0..2 fg=Muted bg=Background
r0 c2..18 fg=Foreground bg=Background bold
r0 c18..21 fg=Border bg=Background
r0 c21..32 fg=Muted bg=Background
r0 c32..80 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..22 fg=Foreground bg=Background bold
r1 c22..80 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..25 fg=Foreground bg=Background
r2 c25..80 bg=Background
r3 c0..53 fg=Foreground bg=Background bold
r3 c53..80 bg=Background
r4 c0..1 fg=Foreground bg=Background bold
r4 c1..2 bg=Background
r4 c2..12 fg=Muted bg=Background
r4 c12..15 fg=Border bg=Background
r4 c15..16 fg=Foreground bg=Background bold
r4 c16..17 bg=Background
r4 c17..21 fg=Muted bg=Background
r4 c21..80 bg=Background
r5 c0..80 bg=Background
r6 c0..80 bg=Background
r7 c0..80 bg=Background

== dark-truecolor · 120x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once · n deny



---
r0 c0..2 fg=Muted bg=Background
r0 c2..18 fg=Foreground bg=Background bold
r0 c18..21 fg=Border bg=Background
r0 c21..32 fg=Muted bg=Background
r0 c32..120 bg=Background
r1 c0..2 fg=Primary bg=Background bold
r1 c2..22 fg=Foreground bg=Background bold
r1 c22..120 bg=Background
r2 c0..5 fg=Muted bg=Background
r2 c5..25 fg=Foreground bg=Background
r2 c25..120 bg=Background
r3 c0..53 fg=Foreground bg=Background bold
r3 c53..120 bg=Background
r4 c0..1 fg=Foreground bg=Background bold
r4 c1..2 bg=Background
r4 c2..12 fg=Muted bg=Background
r4 c12..15 fg=Border bg=Background
r4 c15..16 fg=Foreground bg=Background bold
r4 c16..17 bg=Background
r4 c17..21 fg=Muted bg=Background
r4 c21..120 bg=Background
r5 c0..120 bg=Background
r6 c0..120 bg=Background
r7 c0..120 bg=Background

== no-color · 40x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety
decision: your call.
y allow once · n deny



== no-color · 80x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once · n deny




== no-color · 120x8
? Could not decide · Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once · n deny




== ascii · 40x8
? Could not decide - Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety
decision: your call.
y allow once  n deny



== ascii · 80x8
? Could not decide - Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once  n deny




== ascii · 120x8
? Could not decide - Auto-Review
$ git push origin main
Why: the review timed out
No verdict. This is not a safety decision: your call.
y allow once  n deny
